k8s/pod-postgresclient.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-client
  labels:
    app: postgres-client
spec:
  containers:
    - name: psql
      image: postgres:15
      command: ["sleep", "infinity"]
