k8s/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres
spec:
  rules:
  - host: postgres.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: postgres
            port:
              number: 5432
